QWinEventNotifier: fix crash on application shutdown

The event dispatcher can be null already but we may have outstanding
QWinEventNotifier objects (like in a QProcess).

Patch-By: Tamas Karpati
Task-number: QTBUG-70214
Change-Id: I5e432e273def425ea334fffd154f34abfd6cb11a
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>